# python-jsonschema-minmax

./: README.md  pyproject.toml  setup.py  test.py
metaschema/: minmax-metaschema.json  minmax-vocabulary.json
src/: __init__.py  minmax_validator.py
src/jsonschema_minmax/: __init__.py  inline_references.py  minmax_validator.py  registry.py
test/: check_test_schema.py
test/fixtures/: test_instance.json  test_schema.json
